Fix restart button visibility bug

--- a/styles.css
+++ b/styles.css
@@ -53,7 +53,7 @@
 #popupContent {
 	margin-top: 25%;
 	left: 50%;
-	width: 30%;
+	width: 50%;
 	height: 0%;
 }
 
@@ -92,7 +92,8 @@
 	font-size: 23px;
 	padding: 25px;
 	background-color: rgba(0, 0, 0, 0.9);
-	margin-bottom: 50px;
+	margin-bottom: 25px;
+	border-radius: 0 0 30px 30px;
 }
 
 @media screen and (max-width: 600px) {
@@ -117,6 +118,7 @@
 	font-size: 30px;
 	padding: 25px;
 	background-color: rgba(0, 0, 0, 0.9);
+	border-radius: 30px 30px 0 0;
 }
 
 @media screen and (max-width: 600px) {
@@ -266,6 +268,7 @@
 }
 
 .restartBtn {
+	display: none;
 	outline: none;
 	border: 1px solid ghostwhite;
 	border-radius: 50%;
